# axum_s3_example

./: .env  Cargo.toml  README.md
src/: main.rs  uploader.rs
